<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_custom_calendar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_header_calander"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:gravity="center"
        android:background="@color/theme_text_color"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/previous_month"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/calande_arrow" />
<!--        <TextView
            android:id="@+id/display_current_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="4dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="current date"
            android:textAllCaps="true"
            android:textColor="@color/background"
            android:visibility="gone"
            android:textSize="16sp" />-->
        <TextView
            android:id="@+id/display_current_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="MOVE"
            android:textColor="@color/grey_text_color"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/next_month"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:padding="@dimen/_5sdp"
            android:rotation="180"
            android:src="@drawable/calande_arrow" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5sp"
        android:background="#F5F5F5" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#333333"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/sun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sun"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/mon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mon"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tue"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/wed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wed"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/thu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thu"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/fri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fri"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/sat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sat"
            android:textColor="@color/white" />
    </LinearLayout>

    <com.islantraveller.Calendar.ExpandableHeightGridView
        android:id="@+id/calendar_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:horizontalSpacing="4sp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:numColumns="7"
        android:background="@color/background"
        android:verticalSpacing="4sp" />
</LinearLayout>